--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <module>quartz-test</module>
         <module>base</module>
         <module>poi-test</module>
+        <module>netty-test</module>
+        <module>curator-test</module>
     </modules>
 
     <properties>
@@ -33,6 +35,7 @@
         <mybatis.version>1.3.2</mybatis.version>
         <druid.version>1.1.10</druid.version>
         <pagehelper.version>1.3.0</pagehelper.version>
+        <guava.version>20.0</guava.version>
         <disruptor.version>3.4.1</disruptor.version>
     </properties>
 
@@ -121,6 +124,12 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>${hutool-all.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
 
         <dependency>
