--- a/es8.0-test/src/main/resources/application.properties
+++ b/es8.0-test/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port=8081
 server.servlet.context-path=/es
 
 spring.application.name: es_test
+
+spring.datasource.druid.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/wch?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false&allowMultiQueries=true
+spring.datasource.druid.username=root
+spring.datasource.druid.password=root
