2022/9/5 修改项目结构

--- a/es8.0-test/pom.xml
+++ b/es8.0-test/pom.xml
@@ -22,7 +22,7 @@
     <dependencies>
         <dependency>
             <groupId>com.wch.study</groupId>
-            <artifactId>base</artifactId>
+            <artifactId>web-base</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
