--- a/websocket-test/src/main/resources/application.properties
+++ b/websocket-test/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url==jdbc:mysql://192.168.100.29:3306/wch?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=root
+
+logging.config=classpath:spring-log4j2.xml
