--- a/web-base/pom.xml
+++ b/web-base/pom.xml
@@ -4,12 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>study</artifactId>
-        <groupId>com.wch</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>com.wch.study</groupId>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wch.study</groupId>
     <artifactId>web-base</artifactId>
 
     <properties>
@@ -18,6 +17,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.wch.study</groupId>
+            <artifactId>base</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
